# MiraDream3D

./: .gitignore  CMakeLists.txt  OpenGLTrucsEtAstuces.txt  notes.md  resources.qrc
assets/shaders/: grid.frag  grid.vert  standard.frag  standard.vert  viewport_material.frag  viewport_material.vert  viewport_solid.frag  viewport_test_halfedges.frag  viewport_test_halfedges.vert  viewport_textures.frag  viewport_textures.vert  viewport_wireframe.frag  viewport_wireframe.vert
include/: RenderDocHelper.hpp  defs.h  types.h
include/controller/: AssetImporter.h  Engine.h  ErrorController.h  RenderController.h  SceneController.h  loadFile.h
include/model/: AssetImporter.h  Camera.h  HalfEdgeBuilder.h  Mesh.h  MeshBuilder.h  MeshTopologyBuilder.h  Node.h  PrimitiveMeshes.h  PrimitiveMeshes.hpp  Renderer.h  Scene.h  Shader.h  ShaderManager.h  TextureManager.h  geometry.hpp  texture_types.hpp
include/util/: QTResourceManager.hpp  file_funcs.hpp
include/view/: ErrorViewer.hpp  MainWindow.h  RenderWidget.h  mainwindow.h
libs/assimp/cmake-modules/: FindPkgMacros.cmake
libs/assimp/code/AssetLib/AMF/: AMFImporter_Postprocess.cpp
libs/assimp/code/AssetLib/Assjson/: json_exporter.cpp
libs/assimp/code/AssetLib/COB/: COBLoader.h
libs/assimp/code/AssetLib/FBX/: FBXExporter.cpp  FBXMeshGeometry.cpp
libs/assimp/code/AssetLib/HMP/: HMPFileData.h
libs/assimp/code/AssetLib/IFC/: IFCLoader.cpp
libs/assimp/code/AssetLib/LWO/: LWOBLoader.cpp
libs/assimp/code/AssetLib/MD2/: MD2FileData.h
libs/assimp/code/AssetLib/MD3/: MD3FileData.h  MD3Loader.h
libs/assimp/code/AssetLib/MDC/: MDCFileData.h
libs/assimp/code/AssetLib/MDL/: MDLFileData.h  MDLLoader.cpp  MDLLoader.h
libs/assimp/code/AssetLib/MDL/HalfLife/: HL1MDLLoader.cpp
libs/assimp/code/AssetLib/NFF/: NFFLoader.cpp
libs/assimp/code/AssetLib/Step/: STEPFile.h
libs/assimp/code/AssetLib/X/: XFileParser.cpp
libs/assimp/code/Common/: DefaultIOSystem.cpp  ScenePreprocessor.h
libs/assimp/code/Geometry/: GeometryUtils.h
libs/assimp/code/PostProcessing/: CalcTangentsProcess.cpp  JoinVerticesProcess.cpp  TriangulateProcess.cpp
libs/assimp/contrib/Open3DGC/: o3dgcArithmeticCodec.cpp
libs/assimp/contrib/android-cmake/: android.toolchain.cmake
libs/assimp/contrib/clipper/: clipper.cpp
libs/assimp/contrib/draco/cmake/: draco_flags.cmake  draco_targets.cmake  draco_tests.cmake
libs/assimp/contrib/googletest/ci/: linux-presubmit.sh
libs/assimp/contrib/googletest/docs/: advanced.md  faq.md  primer.md
libs/assimp/contrib/googletest/googlemock/: CMakeLists.txt
libs/assimp/contrib/googletest/googlemock/src/: gmock-spec-builders.cc
libs/assimp/contrib/googletest/googlemock/test/: gmock-matchers-comparisons_test.cc  gmock-matchers-containers_test.cc  gmock-spec-builders_test.cc  gmock_ex_test.cc  gmock_link_test.h
libs/assimp/contrib/googletest/googletest/: CMakeLists.txt
libs/assimp/contrib/googletest/googletest/cmake/: internal_utils.cmake
libs/assimp/contrib/googletest/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest.cc
libs/assimp/contrib/googletest/googletest/test/: googletest-death-test-test.cc  googletest-json-output-unittest.py  googletest-options-test.cc  googletest-port-test.cc  googletest-printers-test.cc  gtest_environment_test.cc  gtest_json_test_utils.py  gtest_repeat_test.cc  gtest_unittest.cc  gtest_xml_output_unittest.py
libs/assimp/contrib/openddlparser/: CMakeLists.txt
libs/assimp/contrib/poly2tri/poly2tri/sweep/: sweep.cc  sweep.h
libs/assimp/contrib/pugixml/src/: pugixml.cpp
libs/assimp/contrib/rapidjson/include/rapidjson/: encodings.h
libs/assimp/contrib/unzip/: unzip.c
libs/assimp/contrib/zip/: CMakeLists.txt  README.md
libs/assimp/contrib/zip/test/: minunit.h  test_append.c  test_entry.c  test_extract.c  test_permissions.c  test_read.c  test_write.c
libs/assimp/contrib/zlib/: deflate.c  inflate.c  trees.c  zlib.h
libs/assimp/contrib/zlib/contrib/blast/: blast.c
libs/assimp/contrib/zlib/contrib/iostream/: test.cpp
libs/assimp/contrib/zlib/contrib/masmx64/: gvmat64.asm
libs/assimp/doc/: dox.h  dox_cmd.h
libs/assimp/fuzz/ossfuzz/: build.sh
libs/assimp/include/assimp/: ParsingUtils.h  camera.h  mesh.h
libs/assimp/include/assimp/Compiler/: pstdint.h
libs/assimp/port/PyAssimp/pyassimp/: helper.py
libs/assimp/port/PyAssimp/scripts/: quicktest.py
libs/assimp/port/assimp_rs/src/: lib.rs
libs/assimp/test/headercheck/: CMakeLists.txt
libs/assimp/test/unit/: AbstractImportExportBase.h  CCompilerTest.c  MathTest.h  utAMFImportExport.cpp  utBlenderImportExport.cpp  utBlenderIntermediate.cpp  utD3MFImportExport.cpp  utExport.cpp  utFBXImporterExporter.cpp  utFindDegenerates.cpp  utIOSystem.cpp  utImporter.cpp  utLWOImportExport.cpp  utMaterialSystem.cpp  utMatrix3x3.cpp  utMetadata.cpp  utObjTools.cpp  utPLYImportExport.cpp  utPretransformVertices.cpp  utScenePreprocessor.cpp  utSharedPPData.cpp  utUSDImport.cpp  utValidateDataStructure.cpp  utVertexTriangleAdjacency.cpp  utXImporterExporter.cpp
libs/assimp/test/unit/Common/: uiScene.cpp  utAssertHandler.cpp
libs/assimp/tools/assimp_cmd/: CompareDump.cpp  Main.cpp
libs/glm/detail/: type_quat_simd.inl
libs/glm/gtx/: intersect.inl  matrix_decompose.inl
src/: RenderDocHelper.cpp  main.cpp
src/controller/: AssetImporter.cpp  CMakeLists.txt  Engine.cpp  ErrorController.cpp  RenderController.cpp  SceneController.cpp  loadFile.cpp
src/model/: AssetImporter.cpp  CMakeLists.txt  Camera.cpp  HalfEdgeBuilder.cpp  Mesh.cpp  MeshBuilder.cpp  MeshTopologyBuilder.cpp  Node.cpp  PrimitiveMeshes.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  ShaderManager.cpp  TextureManager.cpp
src/model/importer/: AssetImporter.cpp  MtlParser.cpp  MtlParser.hpp  objParsing.cpp  objParsing.hpp
src/view/: CMakeLists.txt  ErrorViewer.cpp  MainWindow.cpp  RenderWidget.cpp  mainwindow.cpp
tests/: CMakeLists.txt
tests/ImporterTests/: CubeBasicImports.cpp
tests/RenderTests/: renderCubeTest.cpp
tests/testAssets/obj_halfedge_tests/: README.txt
tests/testUtils/: MeshComparison.h
(+61 files in other folders)
